--- a/src/App.css
+++ b/src/App.css
@@ -226,7 +226,7 @@ h1,h2, h3 {
 
 .detail {
     color: white;
-    margin-left: -276px;
+    margin-left: -300px;
     margin-top: 420px;
   }
 
@@ -353,8 +353,8 @@ h1,h2, h3 {
 
 .detail {
     color: white;
-    margin-left: -300px;
-    margin-top: 460px;
+    margin-left: -280px;
+    margin-top: 420px;
   }
 
   .padding > h1 {
@@ -365,3 +365,131 @@ h1,h2, h3 {
     font-size: 12px;
   }
 }
+
+@media only screen and (max-width:376px) {
+  .container {
+    width: 100%;
+    margin-left: 2%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    height: 100%;
+  }
+
+  .movie-search {
+    width: 25vh;
+    height: 25px;
+    font-size: 12px;
+    border-radius: 10px;
+    border: 1.5px solid white;
+    outline: none;
+    text-indent: 8px;
+    color: white;
+    background-color: rgb(102, 102, 102);
+  }
+
+  .input-group {
+    display: flex;
+    margin-top: 10px;
+    justify-content: start;
+  }
+
+  .btn {
+    border: none;
+    background-color: rgb(9, 144, 255);
+    font-size: 12px;
+    border-radius: 8px;
+    color: white;
+    padding: 8px;
+    cursor: pointer;
+    margin-left: 20px;
+  }
+
+  .movie {
+    padding: 5px;
+    margin-top: 20px;
+  }
+
+  .poster {
+    width: 45vh;
+    overflow: hidden;
+  }
+
+.detail {
+    color: white;
+    margin-left: -300px;
+    margin-top: 470px;
+  }
+
+  .padding > h1 {
+    font-size: 18px;
+  }
+
+  .padd p {
+    font-size: 12px;
+  }
+}
+
+
+@media only screen and (max-width:360px) {
+  .container {
+    width: 100%;
+    margin-left: 2%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    height: 100%;
+  }
+
+  .movie-search {
+    width: 25vh;
+    height: 30px;
+    font-size: 14px;
+    border-radius: 10px;
+    border: 1.5px solid white;
+    outline: none;
+    text-indent: 8px;
+    color: white;
+    background-color: rgb(102, 102, 102);
+  }
+
+  .input-group {
+    display: flex;
+    margin-top: 10px;
+    justify-content: start;
+  }
+
+  .btn {
+    border: none;
+    background-color: rgb(9, 144, 255);
+    font-size: 12px;
+    border-radius: 8px;
+    color: white;
+    padding: 8px;
+    cursor: pointer;
+    margin-left: 20px;
+  }
+
+  .movie {
+    padding: 5px;
+    margin-top: 20px;
+    /* flex-direction: column; */
+  }
+
+  .poster {
+    width: 275px;
+  }
+
+.detail {
+    color: white;
+    margin-left: -270px;
+    margin-top: 420px;
+  }
+
+  .padding > h1 {
+    font-size: 22px;
+  }
+
+  .padd p {
+    font-size: 12px;
+  }
+}
+
